--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gsap": "^3.14.2",
     "lucide-react": "^0.400.0",
     "next": "14.2.5",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18"
   },
