--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "gsap": "^3.14.2",
     "lucide-react": "^0.400.0",
     "next": "14.2.5",
