--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.95.3",
     "gsap": "^3.14.2",
     "lucide-react": "^0.400.0",
     "next": "14.2.5",
