--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.95.3",
+    "groq-sdk": "^0.37.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.400.0",
     "next": "14.2.5",
