--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "groq-sdk": "^0.37.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.400.0",
-    "next": "14.2.5",
+    "next": "^16.1.6",
     "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18"
